# MoneyManager-App

docs/: README.md
src/: AddAccount.ui  CMakeLists.txt  MoneySystem.cpp  MoneySystem.hpp  addaccount.cpp  addaccount.hpp  addaccount.ui  authtorizationsystem.cpp  authtorizationsystem.h  authtorizationsystem.ui  deleteaccountconfirm.cpp  deleteaccountconfirm.hpp  deleteaccountconfirm.ui  dialog.cpp  dialog.hpp  dialog.ui  loginsystem.cpp  loginsystem.hpp  loginsystem.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  registrationsystem.cpp  registrationsystem.hpp  registrationsystem.ui
